--- a/app/modules/admin/templates/attendance_list.html
+++ b/app/modules/admin/templates/attendance_list.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="ml-4">
                                 <div class="text-sm font-bold text-gray-900 student-name group-hover:text-indigo-600 transition-colors">{{ s.name }}</div>
-                                <div class="text-xs text-gray-400">Batch 2024</div>
+                                <div class="text-xs text-gray-400">Batch {{ s.batch or 'N/A' }}</div>
                             </div>
                         </div>
                     </td>
